--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "turimex-frontend",
+  "name": "integral-calculator",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
@@ -20,7 +20,8 @@
     "react-icons": "^5.0.1",
     "react-katex": "^3.0.1",
     "react-mathquill": "^1.0.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
