--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "integral-calculator",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
@@ -14,10 +14,14 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "nerdamer": "^1.1.13",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.0.1",
     "react-katex": "^3.0.1",
     "react-mathquill": "^1.0.3",
