--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "paths": {
       "@/*": ["*"],
       "@app": ["App.tsx"],
+      "@i18n": ["locales/config.ts"],
       "@/~external-links": ["utils/externalLinks.ts"],
       "@/~integrals": ["utils/integrals.ts"],
       "@/~routes": ["utils/routes.ts"],
@@ -33,6 +34,9 @@
       "@/~global/*": ["components/global/*", "contexts/global/*", "hooks/global/*", "providers/global/*"],
       "@/~home/*": ["components/home/*", "contexts/home/*", "hooks/home/*", "views/home/*", "providers/home/*"],
       "@/~others/*": ["components/others/*", "contexts/others/*", "hooks/others/*", "views/others/*", "providers/others/*"],
+      "@/~en-ns/*": ["locales/en/calc/*", "locales/en/global/*", "locales/en/home/*", "locales/en/others/*"],
+      "@/~es-ns/*": ["locales/es/calc/*", "locales/es/global/*", "locales/es/home/*", "locales/es/others/*"],
+      "@/~locales/*": ["locales/*"],
       "@/~styles/*": ["styles/*"],
       "@/~types/*": ["types/*"]
     }
